--- a/SetCompare.csproj
+++ b/SetCompare.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IEnumerable.cs" />
+    <Compile Include="People.cs" />
+    <Compile Include="Person_2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
